# B-RANKO

./: .gitignore  README.md  environment.yml  install.sh  pyproject.toml
branko/: __init__.py  lightning.py  masks.py  utils.py
branko/data/: __init__.py  data_preparation.sh  dataset.py  pretraining_dataset_conf.yaml  tokenizer.py
branko/model/: __init__.py  attention.py  covariance_pooling.py  model.py  modules.py  rope.py
configs/finetune/: branko_aptamer_example.yaml
configs/pretrain/: branko_pretrain.yaml
data/aptadiff_datasetA/: datasetA_IGFBP3_P6_train.fasta  datasetA_IGFBP3_P6_train.fasta.fai  datasetA_IGFBP3_P6_val.fasta  datasetA_IGFBP3_P6_val.fasta.fai
examples/: quickstart.ipynb
scripts/: build_length_distribution.py  evaluate.py  generate.py  train.py
