[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branko"
version = "0.1.0"
description = "Bidirectional RNA autoregressive transformer"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["branko*"]

[tool.setuptools.package-data]
branko = ["data/*.yaml"]
